fix container not fitting properly in smaller screen

--- a/style.css
+++ b/style.css
@@ -247,7 +247,7 @@ textarea {
   }
 
   .container {
-    width: 100vw;
+    width: 96vw;
     max-width: 100vw;
     padding: 10px;
   }
